--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/fixmytown
+MONGO_URI=mongodb+srv://civicpulse_user:Netaji%402023@cluster0.s97etd4.mongodb.net/CivicPulse?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=yourVerySecretKey123
+FRONTEND_URL=https://civicpulse-livid.vercel.app
+
