fix: production env, mongo connection & cors

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,4 @@
-PORT=5000
-MONGO_URI=mongodb+srv://civicpulse_user:Netaji%402023@cluster0.s97etd4.mongodb.net/CivicPulse?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://civicpulse_user:Netaji%402023@cluster0.s97etd4.mongodb.net/CivicPulse?retryWrites=true&w=majority
 JWT_SECRET=yourVerySecretKey123
-FRONTEND_URL=https://civicpulse-livid.vercel.app
-
+FRONTEND_URL=https://civic-pulse-steel.vercel.app
+NODE_ENV=production
